--- a/Association_Rule_Mining/Apriori_Algorithm.ipynb
+++ b/Association_Rule_Mining/Apriori_Algorithm.ipynb
@@ -1,13 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "d2658e7c-5480-4ec5-9688-da452fbfb673",
+   "cell_type": "markdown",
+   "id": "dea32ed5-1cfa-44cd-8a11-66beec3a79d1",
    "metadata": {},
    "source": [
-    "Apriori Algorithm uses frequent item sets to generate association rules. It is based on the concept that a subset of a frequent item set must be a frequent item set.\n",
+    "**Apriori Algorithm uses frequent item sets to generate association rules. It is based on the concept that a subset of a frequent item set must be a frequent item set.**\n",
     "\n",
-    "Frequent item set is an itemset whose support value is greater than a threshold value."
+    "**Frequent item set is an itemset whose support value is greater than a threshold value.**"
    ]
   },
   {
