--- a/Classification/KNN.ipynb
+++ b/Classification/KNN.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "a26e2eb2-e2a4-454b-9bf3-ab8d032c0485",
+   "cell_type": "markdown",
+   "id": "b28faa05-a22b-4cec-b04e-b868ab10be5b",
    "metadata": {},
    "source": [
-    "KNN - K Nearest Neighbours is a Supervised Learning Algorithm that classifies a new data point into the target class, depending on the features of it,s neighbouring data points.\n",
+    "***KNN*** - K Nearest Neighbours is a **Supervised Learning** Algorithm that classifies a new data point into the target class, depending on the features of it's neighbouring data points.\n",
     "Its a non-parametric  technique."
    ]
   },
