--- a/Classification/RandomForest.ipynb
+++ b/Classification/RandomForest.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "f209375b-4260-4961-a902-73e21e4d738b",
+   "cell_type": "markdown",
+   "id": "c9663bd5-2807-4069-a285-ecbf333d9854",
    "metadata": {},
    "source": [
-    "Random forest is constructed using multiple decision trees and the final decision is obtained by majority votes of the decision trees."
+    "**Random forest is constructed using multiple decision trees and the final decision is obtained by majority votes of the decision trees.**"
    ]
   },
   {
