--- a/Classification/SVM.ipynb
+++ b/Classification/SVM.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "67a4ecbe-d007-410e-b4ff-9d6ca60e6388",
+   "cell_type": "markdown",
+   "id": "33d0d1f4-1d87-459c-a870-81f77b9bcdb4",
    "metadata": {},
    "source": [
-    "SVM - Support Vector Machine is a discriminative classifier that is formally designed by seperative hyperplane. It is a representation of examples as points in space that are mapped so that points of different categories are seperated by a gap as wide as possible."
+    "***SVM*** - Support Vector Machine is a discriminative classifier that is formally designed by seperative hyperplane. It is a representation of examples as points in space that are mapped so that points of different categories are seperated by a gap as wide as possible."
    ]
   },
   {
@@ -1708,17 +1708,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2b21efba-81ed-4de3-b8f8-3f5a214d1f8a",
+   "cell_type": "markdown",
+   "id": "08dc3e2a-d0bb-498d-b8be-806829febae4",
    "metadata": {},
    "source": [
     "The make_moons function from scikit-learn generates a synthetic dataset for binary classification where the classes are shaped as two interleaving half circles (resembling the shape of a crescent moon). \n",
     "\n",
-    "n_samples=100: This parameter specifies the number of data points to generate. \n",
+    "**n_samples** =100: This parameter specifies the number of data points to generate. \n",
     "\n",
-    "noise=0.15: This parameter controls the amount of noise to add to the data.A higher noise value means more noisy data, which can make the classification task more challenging. \n",
+    "**noise** =0.15: This parameter controls the amount of noise to add to the data.A higher noise value means more noisy data, which can make the classification task more challenging. \n",
     "\n",
-    "random_state=30: This parameter sets the random seed for reproducibility. By setting random_state to a specific value (e.g., 30), you ensure that the generated dataset will be the same every time you run the code, which is useful for debugging and ensuring consistent results in experiments."
+    "**random_state** =30: This parameter sets the random seed for reproducibility. By setting random_state to a specific value (e.g., 30), you ensure that the generated dataset will be the same every time you run the code, which is useful for debugging and ensuring consistent results in experiments."
    ]
   },
   {
