--- a/Clustering/DBSCAN.ipynb
+++ b/Clustering/DBSCAN.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "590391fb-21b9-4664-ac99-51526c600617",
+   "cell_type": "markdown",
+   "id": "a7d061b5-68c7-4a11-afc8-bff33aa61e9c",
    "metadata": {},
    "source": [
-    "DBSCAN :- Density based spatial clustering of applications with noise"
+    "**DBSCAN :- Density based spatial clustering of applications with noise**"
    ]
   },
   {
@@ -737,14 +737,6 @@
     "plt.ylabel(\"Feature 1\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea199ce2-38aa-49fd-883b-a1fdd0dd6ea3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
